--- a/app/Globals.module.css
+++ b/app/Globals.module.css
@@ -1,5 +1,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
+.default {
+  font-family: Poppins;
+}
+
 .light-base-typography {
   color: #000;
   font-family: Poppins;
